--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,12 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=76CB731147145B17A05997B338B1ACE0
-CompanyName=LongmireLocomotion
-ProjectName=AdvancedLocomotionV4
-CompanyDistinguishedName=LongmireLocomotion
+CompanyName=NU Game Studio Club
+ProjectName=Operation Bang Bang
+CompanyDistinguishedName=NU Game Studio Club
 SupportContact=longmirelocomotion@gmail.com
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "E9646215430D3E18E23510A7B7E04BB5", "AdvancedLocomotionV4")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "D4EBAA114497D35D320D28AE94F94A24", "AdvancedLocomotionV4")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "E9646215430D3E18E23510A7B7E04BB5", "Operation Bang Bang")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "D4EBAA114497D35D320D28AE94F94A24", "Operation Bang Bang")
 CopyrightNotice=
+Description="Operation Bang Bang "
 
 [StartupActions]
 bAddPacks=False
